HELLODATA-1618 - assemble sql_lab history from all data domains